1.6.2.dev
---------

- fix issue128: enable full substitution in install_command,
  thanks for the PR to Ronald Evers

- fix windows parsing/escaping

1.6.1
-----

- fix issue119: {envsitepackagesdir} is now correctly computed and has
  a better test to prevent regression.

- fix issue116: make 1.6 introduced behaviour of changing to a 
  per-env HOME directory during install activities dependent 
  on "--set-home" for now.  Should re-establish the old behaviour
  when no option is given.

- fix issue118: correctly have two tests use realpath(). Thanks Barry
  Warsaw.

- fix test runs on environments without a home directory
  (in this case we use toxinidir as the homedir)

- fix issue117: python2.5 fix: don't use ``--insecure`` option because 
  its very existence depends on presence of "ssl".  If you
  want to support python2.5/pip1.3.1 based test environments you need 
  to install ssl and/or use PIP_INSECURE=1 through ``setenv``. section.

- fix issue102: change to {toxinidir} when installing dependencies.
  this allows to use relative path like in "-rrequirements.txt".

1.6.0
-----------------

- fix issue35: add new EXPERIMENTAL "install_command" testenv-option to
  configure the installation command with options for dep/pkg install.
  Thanks Carl Meyer for the PR and docs.

- fix issue91: python2.5 support by vendoring the virtualenv-1.9.1 
  script and forcing pip<1.4. Also the default [py25] environment 
  modifies the default installer_command (new config option)
  to use pip without the "--pre" option which was introduced 
  with pip-1.4 and is now required if you want to install non-stable 
  releases.  (tox defaults to install with "--pre" everywhere).

- during installation of dependencies HOME is now set to a pseudo
  location ({envtmpdir}/pseudo-home).  If an index url was specified
  a .pydistutils.cfg file will be written with an index_url setting
  so that packages defining ``setup_requires`` dependencies will not