@@ -1,6 +1,11 @@
 1.6.2.dev
 ---------
 
+- fix issue129: tox now uses Popen(..., universal_newlines=True) to force 
+  creation of unicode stdout/stderr streams.  fixes a problem on specific
+  platform configs when creating virtualenvs with Python3.3. Thanks Jorgen Schäfer
+  or investigation and solution sketch.
+
 - fix issue128: enable full substitution in install_command,
   thanks for the PR to Ronald Evers
 
